Add Firebase configuration script to admin dashboard

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -132,5 +132,7 @@
     ensureSeed();
     refreshList();
   </script>
+  <script type="module" src="scripts/firebase-config.js"></script>
+
 </body>
 </html>
