Add Firebase config script to admin login page

--- a/admin-login.html
+++ b/admin-login.html
@@ -77,5 +77,6 @@
       if(r.ok) setTimeout(()=> location.href='admin-dashboard.html', 700);
     });
   </script>
-</body>
+<script type="module" src="scripts/firebase-config.js"></script>
+ </body>
 </html>
