Add Firebase configuration script to index.html

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 
     <footer style="margin-top:24px;color:var(--muted)">© 2025 Apna Typing Master — Designed by Yashpal</footer>
   </div>
-</body>
+<script type="module" src="scripts/firebase-config.js"></script>
+ </body>
 </html>
