Add Firebase config script to typing-options.html

--- a/typing-options.html
+++ b/typing-options.html
@@ -59,5 +59,6 @@
   <script>
     // nothing special
   </script>
-</body>
+<script type="module" src="scripts/firebase-config.js"></script>
+ </body>
 </html>
