Add firebase-config script to typing-test.html

--- a/typing-test.html
+++ b/typing-test.html
@@ -74,5 +74,6 @@
   </div>
 
   <script type="module" src="scripts/main.js"></script>
-</body>
+<script type="module" src="scripts/firebase-config.js"></script>
+ </body>
 </html>
