--- a/typing-test.html
+++ b/typing-test.html
@@ -75,5 +75,6 @@
 
   <script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/firebase-config.js"></script>
+<script src="scripts/main.js"></script>
  </body>
 </html>
