--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -134,5 +134,7 @@
   </script>
   <script type="module" src="scripts/firebase-config.js"></script>
 
+<script src="scripts/admin.js"></script>
+
 </body>
 </html>
