--- a/admin-login.html
+++ b/admin-login.html
@@ -78,5 +78,6 @@
     });
   </script>
 <script type="module" src="scripts/firebase-config.js"></script>
- </body>
+<script src="scripts/login.js"></script>
+  </body>
 </html>
