--- a/typing-options.html
+++ b/typing-options.html
@@ -54,11 +54,24 @@
         </div>
       </div>
     </div>
+
+    <!-- ✅ CUSTOM PASSAGE CARD (exact yahin add karna tha) -->
+    <div class="card" style="margin-top:20px;">
+      <div>
+        <div class="title">Custom Passage</div>
+        <div class="desc">Paste your own Hindi / English text and test typing speed.</div>
+      </div>
+      <div style="display:flex;gap:8px;margin-top:8px;">
+        <a class="btn" href="custom-typing.html">Enter Custom Passage</a>
+      </div>
+    </div>
+    <!-- ✅ END CUSTOM PASSAGE BLOCK -->
+
   </div>
 
   <script>
     // nothing special
   </script>
-<script type="module" src="scripts/firebase-config.js"></script>
- </body>
+  <script type="module" src="scripts/firebase-config.js"></script>
+</body>
 </html>
